[package]
name = "rodio_tap"
version = "0.1.0"
edition = "2024"

[dependencies]
rodio = "0.22"
rtrb = "0.3"
arc-swap = "1"
arrayvec = "0.7"
cpal = "0.17"
log = { version = "0.4", optional = true }
tokio = { version = "1", features = ["rt", "time"], default-features = false, optional = true }
rustfft = { version = "6", optional = true }

[dev-dependencies]
rustfft = "6"

[features]
async = ["tokio"]
visualizer = ["rustfft"]

[[example]]
name = "wav_visualizer_full"
path = "examples/wav_visualizer_full.rs"

[[example]]
name = "wav_visualizer_simple"
required-features = ["visualizer"]