[package]
name = "rodio_tap"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Tap rodio audio sources and analyze them in real-time."
keywords = ["audio", "rodio", "visualization"]
repository = "https://github.com/phayes/rodio_tap"
documentation = "https://docs.rs/rodio_tap"
authors = ["Patrick Hayes <patrick.d.hayes@gmail.com>"]

[dependencies]
rodio = "0.22"
rtrb = "0.3"
arc-swap = "1"
arrayvec = "0.7"
cpal = "0.17"
log = { version = "0.4", optional = true }
tokio = { version = "1", features = ["rt", "time"], default-features = false, optional = true }
rustfft = { version = "6", optional = true }

[dev-dependencies]
rustfft = "6"
hound = "3"

[features]
async = ["tokio"]
visualizer = ["rustfft"]

[[example]]
name = "wav_visualizer_full"
path = "examples/wav_visualizer_full.rs"

[[example]]
name = "wav_visualizer_simple"
required-features = ["visualizer"]

[[example]]
name = "wav_recorder"
path = "examples/wav_recorder.rs"

[[example]]
name = "wav_low_latency"
path = "examples/wav_low_latency.rs"